DESCRIÇÃO_DA_ALTERACAO

--- a/assets/app/BKPs/cadastrar_entidades.html
+++ b/assets/app/BKPs/cadastrar_entidades.html
@@ -171,6 +171,15 @@
 <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Observação</p>
 <textarea class="form-textarea flex w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 min-h-[120px] placeholder:text-[#617589] p-[15px] text-base font-normal transition-all" placeholder="Adicione informações adicionais aqui..."></textarea>
 </div>
+
+
+<div class="pt-2">
+    <button onclick="window.location.href='entidades_lista.html'" class="w-full bg-white dark:bg-gray-800 border border-primary text-primary hover:bg-primary/5 h-14 rounded-xl text-lg font-bold shadow-sm transition-all active:scale-[0.98] flex items-center justify-center gap-2">
+        <span class="material-symbols-outlined">format_list_bulleted</span>
+        Ver Lista de Entidades
+    </button>
+</div>
+
 </div>
 </div>
 </div>
