--- a/assets/app/cadastrar_tarefas.html
+++ b/assets/app/cadastrar_tarefas.html
@@ -1,50 +1,85 @@
-document.addEventListener('DOMContentLoaded', () => {
-    const btnSave = document.getElementById('btnSaveTask');
-
-    btnSave.addEventListener('click', async () => {
-        const title = document.getElementById('taskTitle').value;
-        const entidade = document.getElementById('taskEntity').value;
-        const content = document.getElementById('taskContent').value;
-        const status = document.getElementById('taskStatus').value;
-        const observacao = document.getElementById('taskObs').value;
-
-        if (!title) {
-            alert('Por favor, preencha pelo menos o título da tarefa.');
-            return;
+<!DOCTYPE html>
+<html class="light" lang="pt-BR">
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#137fec",
+                        "danger": "#ef4444",
+                        "background-light": "#f6f7f8",
+                        "background-dark": "#101922",
+                    },
+                    fontFamily: { "display": ["Inter", "sans-serif"] },
+                    borderRadius: { "xl": "0.75rem" },
+                },
+            },
         }
+    </script>
+</head>
 
-        btnSave.disabled = true;
-        btnSave.innerText = 'Salvando...';
+<body class="bg-background-light dark:bg-background-dark font-display">
+    <div class="relative flex h-auto min-h-screen w-full flex-col max-w-[480px] mx-auto bg-background-light dark:bg-background-dark overflow-x-hidden pb-40">
+        
+        <div class="sticky top-0 z-50 flex items-center bg-white/80 dark:bg-background-dark/80 backdrop-blur-md p-4 justify-between border-b border-gray-100 dark:border-gray-800">
+            <div onclick="window.location.href='listar_tarefas.html'" class="text-[#111418] dark:text-white flex size-10 shrink-0 items-center justify-center cursor-pointer">
+                <span class="material-symbols-outlined">arrow_back_ios</span>
+            </div>
+            <h2 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-tight flex-1 text-center">Cadastro de Tarefa</h2>
+            <div class="size-10 shrink-0"></div>
+        </div>
 
-        try {
-            // Obtém o usuário logado
-            const { data: { user } } = await window.supabaseClient.auth.getUser();
+        <div class="flex flex-col flex-1 px-4 py-6 space-y-4">
+            <div class="flex flex-col">
+                <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Título da Tarefa</p>
+                <input id="taskTitle" class="form-input flex w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 h-14 p-[15px] text-base font-normal transition-all" placeholder="Ex: Entrega de material"/>
+            </div>
 
-            const { error } = await window.supabaseClient
-                .from('tarefas')
-                .insert([
-                    {
-                        user_id: user?.id,
-                        title: title,
-                        entidade: entidade,
-                        tarefa_descricao: content, // Mapeado conforme sua tabela
-                        content: content,
-                        status: status,
-                        observacao: observacao
-                    }
-                ]);
+            <div class="flex flex-col">
+                <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Entidade (Cliente/Fornecedor)</p>
+                <input id="taskEntity" class="form-input flex w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 h-14 p-[15px] text-base font-normal transition-all" placeholder="Buscar entidade..."/>
+            </div>
 
-            if (error) throw error;
+            <div class="flex flex-col">
+                <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Tarefa</p>
+                <textarea id="taskContent" class="form-textarea flex w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 min-h-[100px] p-[15px] text-base font-normal transition-all" placeholder="O que precisa ser feito?"></textarea>
+            </div>
 
-            alert('Tarefa cadastrada com sucesso!');
-            window.location.href = 'listar_tarefas.html';
+            <div class="flex flex-col">
+                <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Status</p>
+                <div class="relative">
+                    <select id="taskStatus" class="form-select w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 h-14 p-[15px] pr-10 text-base font-normal appearance-none transition-all">
+                        <option value="pendente">Pendente</option>
+                        <option value="realizada">Realizada</option>
+                    </select>
+                </div>
+            </div>
 
-        } catch (error) {
-            console.error('Erro ao salvar:', error.message);
-            alert('Erro ao salvar tarefa: ' + error.message);
-        } finally {
-            btnSave.disabled = false;
-            btnSave.innerText = 'Salvar Tarefa';
-        }
-    });
-});
+            <div class="flex flex-col">
+                <p class="text-[#111418] dark:text-white text-sm font-semibold leading-normal pb-2 px-1">Observação</p>
+                <textarea id="taskObs" class="form-textarea flex w-full rounded-lg text-[#111418] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 min-h-[120px] p-[15px] text-base font-normal transition-all" placeholder="Notas adicionais..."></textarea>
+            </div>
+
+            <div class="pt-6 flex flex-col gap-3">
+                <button id="btnSaveTask" class="w-full bg-primary hover:bg-primary/90 text-white h-14 rounded-xl text-lg font-bold shadow-lg transition-all active:scale-[0.98]">
+                    Salvar Tarefa
+                </button>
+            </div>
+        </div>
+
+        <script src="js/supabase_config.js"></script>
+        <script src="js/validar_login.js"></script>
+        <script src="js/cadastrar_tarefas.js"></script>
+        <script src="js/navbar.js"></script>
+    </div>
+</body>
+</html>
