--- a/assets/app/tarefas/listar_tarefas.html
+++ b/assets/app/tarefas/listar_tarefas.html
@@ -40,10 +40,11 @@
             <span class="material-icons-round text-3xl">add</span>
         </button>
 
-        <script src="js/supabase_config.js"></script>
-        <script src="js/validar_login.js"></script>
-        <script src="js/listar_tarefas.js"></script>
-        <script src="js/navbar.js"></script>
+        <script src="../supabase_config.js"></script>
+        <script src="../validar_login.js"></script>
+        <script src="../navbar.js"></script>
+        <script src="listar_tarefas.js"></script>
+      
     </div>
 </body>
 </html>
