cada um no seu quadrado

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -180,7 +180,7 @@
         <div class="h-6 bg-transparent"></div>
     </div>
 
-    <script src="js/navbar.js"></script>
-    <script src="js/index.js"></script>
+    <script src="navbar.js"></script>
+    <script src="index/index.js"></script>
 </body>
 </html>
