--- a/assets/app/login.html
+++ b/assets/app/login.html
@@ -62,8 +62,8 @@
 
     </div>
 
-    <script src="js/supabase_config.js"></script>
-    <script src="js/login.js"></script>
+    <script src="supabase_config.js"></script>
+    <script src="login.js"></script>
     
 
 </body>
