--- a/assets/app/login.html
+++ b/assets/app/login.html
@@ -63,7 +63,7 @@
     </div>
 
     <script src="supabase_config.js"></script>
-    <script src="login.js"></script>
+    <script src="login/login.js"></script>
     
 
 </body>
