--- a/assets/app/login/index.html
+++ b/assets/app/login/index.html
@@ -62,8 +62,8 @@
 
     </div>
 
-    <script src="supabase_config.js"></script>
-    <script src="login/login.js"></script>
+    <script src="../supabase_config.js"></script>
+    <script src="login.js"></script>
     
 
 </body>
