--- a/assets/app/ajustes/index.html
+++ b/assets/app/ajustes/index.html
@@ -3,6 +3,11 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Ajustes com Cadastro de Contas Bancárias</title>
+
+<script src="../supabase_config.js"></script>
+        <script src="../validar_login.js"></script>
+
+        
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -233,6 +238,6 @@
 </div>
 </section>
 </main>
-    <script src="js/navbar.js"></script>
+    <script src="../navbar.js"></script>
 
 </body></html>
