--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
     </div>
 </header>
 
+
+
+
+  <!--  ##################################################################################################################### -->   
 <main class="pt-20">
     <section class="relative min-h-[85vh] flex items-center justify-center px-4 overflow-hidden" id="home">
         <div class="relative z-10 max-w-4xl text-center flex flex-col items-center gap-8">
@@ -113,6 +117,46 @@
         </div>
     </section>
 
+ <!--  ##################################################################################################################### -->
+    <section class="py-24 px-6 md:px-16" id="projetos">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-3xl md:text-5xl font-bold mb-16 text-center">Nossos Ecossistemas</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                
+                <div class="glass p-8 border border-slate-border rounded-2xl flex flex-col hover:border-primary transition-all group">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="material-symbols-outlined text-primary text-5xl">desktop_windows</span>
+                        <span class="text-xs font-bold px-3 py-1 bg-primary/10 text-primary rounded-full uppercase tracking-widest">Web Version</span>
+                    </div>
+                    <h3 class="text-2xl font-black mb-4 group-hover:text-primary transition-colors">Sistema ERP Web</h3>
+                    <p class="text-slate-400 leading-relaxed mb-8 flex-grow">
+                        Gestão empresarial completa com módulos de financeiro, entidades, e controle de vendas. Ideal para operações em desktops e navegadores com visão analítica profunda.
+                    </p>
+                    <a href="assets/app/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
+                        Acessar Sistema <span class="material-symbols-outlined">open_in_new</span>
+                    </a>
+                </div>
+
+                <div class="glass p-8 border border-slate-border rounded-2xl flex flex-col hover:border-primary transition-all group">
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="material-symbols-outlined text-primary text-5xl">smartphone</span>
+                        <span class="text-xs font-bold px-3 py-1 bg-emerald-500/10 text-emerald-500 rounded-full uppercase tracking-widest">Mobile Optimized</span>
+                    </div>
+                    <h3 class="text-2xl font-black mb-4 group-hover:text-primary transition-colors">App ERP Business</h3>
+                    <p class="text-slate-400 leading-relaxed mb-8 flex-grow">
+                        Versão mobile focada em agilidade. Gerencie tarefas, visualize fluxo de caixa e cadastre clientes diretamente do seu smartphone com interface intuitiva e rápida.
+                    </p>
+                    <a href="assets/app/tarefas/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
+                        Abrir Aplicativo <span class="material-symbols-outlined">install_mobile</span>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    
+ <!--  ##################################################################################################################### -->
     <section class="py-24 px-6 md:px-16" id="services">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-3xl md:text-5xl font-bold mb-16 text-center">Pacote Completo de Soluções</h2>
