--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-  <!--  ##################################################################################################################### -->   
+  <!-- SOBRE ##################################################################################################################### -->   
 <main class="pt-20">
     <section class="relative min-h-[85vh] flex items-center justify-center px-4 overflow-hidden" id="home">
         <div class="relative z-10 max-w-4xl text-center flex flex-col items-center gap-8">
@@ -117,7 +117,7 @@
         </div>
     </section>
 
- <!--  ##################################################################################################################### -->
+ <!--  PROJETOS ##################################################################################################################### -->
     <section class="py-24 px-6 md:px-16" id="projetos">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-3xl md:text-5xl font-bold mb-16 text-center">Nossos Ecossistemas</h2>
@@ -132,7 +132,7 @@
                     <p class="text-slate-400 leading-relaxed mb-8 flex-grow">
                         Gestão empresarial completa com módulos de financeiro, entidades, e controle de vendas. Ideal para operações em desktops e navegadores com visão analítica profunda.
                     </p>
-                    <a href="assets/app/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
+                    <a href="assets/erp/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
                         Acessar Sistema <span class="material-symbols-outlined">open_in_new</span>
                     </a>
                 </div>
@@ -146,7 +146,7 @@
                     <p class="text-slate-400 leading-relaxed mb-8 flex-grow">
                         Versão mobile focada em agilidade. Gerencie tarefas, visualize fluxo de caixa e cadastre clientes diretamente do seu smartphone com interface intuitiva e rápida.
                     </p>
-                    <a href="assets/app/tarefas/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
+                    <a href="assets/app/index.html" class="inline-flex items-center justify-center gap-2 px-6 py-4 bg-white/5 hover:bg-primary text-white font-bold rounded-xl transition-all border border-slate-border hover:border-primary">
                         Abrir Aplicativo <span class="material-symbols-outlined">install_mobile</span>
                     </a>
                 </div>
