--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEMA ERP ABP - Inicio</title>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+    <!-- SUPABASE #################################################################################### -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase_config.js"></script>    
+    <script src="verifica_login.js"></script>
+    <!-- FIM SUPABASE #################################################################################### -->
+
+    
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <link rel="stylesheet" href="index/style.css">
 </head>
@@ -52,8 +58,7 @@
     </div>
 
 <script src="navbar.js"></script>
-<script src="supabase_config.js"></script>    
-<script src="verifica_login.js"></script>
+
 
 
 </body>
