--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -5,9 +5,13 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Menu de Navegação Principal - ERP ABP</title>
 
+    <!-- SUPABASE #################################################################################### -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/conexao_supabase.js"></script>
-    <script src="js/validar_login.js"></script>
+    <script src="supabase_config.js"></script>    
+    <script src="verifica_login.js"></script>
+    <!-- FIM SUPABASE #################################################################################### -->
+    
+
     
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
