--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -7,8 +7,8 @@
 
     <!-- SUPABASE #################################################################################### -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase_config.js"></script>    
-    <script src="verifica_login.js"></script>
+      <script src="supabase_config.js"></script>
+    <script src="verificar_login.js"></script>
     <!-- FIM SUPABASE #################################################################################### -->
 
     
