--- a/assets/app/notas.html
+++ b/assets/app/notas.html
@@ -185,5 +185,5 @@
 <span class="text-[10px] font-medium">Ajustes</span>
 </button>
 </nav>
-
+    <script src="notas/notas.js"></script>
 </body></html>
