--- a/assets/app/notas/cadastrar_notas.html
+++ b/assets/app/notas/cadastrar_notas.html
@@ -3,6 +3,16 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Cadastro de Notas ERP ABP</title>
+
+
+    <!-- SUPABASE #################################################################################### -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase_config.js"></script>    
+    <script src="verificar_login.js"></script>
+    <script src="navbar.js"></script>
+    <!-- FIM SUPABASE #################################################################################### -->
+
+        
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -82,4 +92,12 @@
         </button>
 </footer>
 
+<script src="notas/listar_notas.js"></script>
+<script src="notas/salvar_nota.js"></script>
+<script src="notas/deletar_nota.js"></script>
+<script src="notas/formulario_notas.js"></script>
+<script src="notas/pesquisar_nota.js"></script>
+<script src="notas/exportar_nota.js"></script>
+<script src="notas/logout.js"></script>
+        
 </body></html>
