--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         </section>
     </main>
 
-    <script src="index/index.js"></script>
+<script src="index/tema.js"></script>
+<script src="index/idioma.js"></script>
+<script src="index/carrinho.js"></script>
+<script src="index/pagamento.js"></script>
+    
 </body>
 </html>
