--- a/assets/app/listar_notas.html
+++ b/assets/app/listar_notas.html
@@ -4,7 +4,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Lista de Notas ERP ABP</title>
 
-         <!-- SUPABASE #################################################################################### -->
+    <!-- SUPABASE #################################################################################### -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase_config.js"></script>    
     <script src="verificar_login.js"></script>
@@ -185,5 +185,13 @@
 <span class="text-[10px] font-medium">Ajustes</span>
 </button>
 </nav>
-    <script src="notas/notas.js"></script>
+         
+<script src="notas/listar_notas.js"></script>
+<script src="notas/salvar_nota.js"></script>
+<script src="notas/deletar_nota.js"></script>
+<script src="notas/formulario_notas.js"></script>
+<script src="notas/pesquisar_nota.js"></script>
+<script src="notas/exportar_nota.js"></script>
+<script src="notas/logout.js"></script>
+         
 </body></html>
