--- a/assets/app/notas/cadastrar_notas.html
+++ b/assets/app/notas/cadastrar_notas.html
@@ -6,9 +6,9 @@
     <title>Cadastro de Notas ERP ABP</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase_config.js"></script>    
-    <script src="verificar_login.js"></script>
-    <script src="navbar.js"></script>
+    <script src="../supabase_config.js"></script>    
+    <script src="../verificar_login.js"></script>
+    <script src="../navbar.js"></script>
         
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
@@ -79,9 +79,9 @@
     </button>
 </footer>
 
-<script src="notas/listar_notas.js"></script>
-<script src="notas/salvar_nota.js"></script>
-<script src="notas/formulario_notas.js"></script>
-<script src="notas/logout.js"></script>
+<script src="listar_notas.js"></script>
+<script src="salvar_nota.js"></script>
+<script src="formulario_notas.js"></script>
+<script src="logout.js"></script>
 </body>
 </html>
