--- a/assets/app/notas/cadastrar_notas.html
+++ b/assets/app/notas/cadastrar_notas.html
@@ -3,85 +3,66 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Cadastro de Notas ERP ABP</title>
+    <title>Cadastro de Notas - ERP ABP</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../supabase_config.js"></script>    
     <script src="../verificar_login.js"></script>
-    <script src="../navbar.js"></script>
         
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     
-    <script id="tailwind-config">
+    <script>
         tailwind.config = {
             darkMode: "class",
             theme: {
                 extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#101922",
-                    },
-                    fontFamily: { "display": ["Inter", "sans-serif"] },
-                    borderRadius: { "xl": "0.75rem" },
-                },
-            },
+                    colors: { "primary": "#137fec", "background-dark": "#101922" },
+                    fontFamily: { "sans": ["Inter", "sans-serif"] }
+                }
+            }
         }
     </script>
-    <style type="text/tailwindcss">
-        @layer base {
-            body { @apply font-display bg-background-light dark:bg-background-dark min-h-screen flex flex-col; }
-            textarea { resize: none; }
-        }
-    </style>
 </head>
-<body class="dark:text-white">
 
-<header class="sticky top-0 z-20 bg-white/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-gray-100 dark:border-gray-800">
-    <div class="flex items-center px-4 py-4">
-        <button onclick="window.location.href='listar_notas.html'" class="flex items-center justify-center p-1 -ml-2 text-primary">
-            <span class="material-symbols-outlined text-2xl">arrow_back_ios</span>
+<body class="bg-[#f6f7f8] dark:bg-background-dark min-h-screen flex flex-col">
+
+<header class="p-4 bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-10">
+    <div class="max-w-2xl mx-auto flex items-center justify-between">
+        <button onclick="window.location.href='listar_notas.html'" class="p-2 hover:bg-gray-100 dark:hover:bg-slate-800 rounded-full transition-colors">
+            <span class="material-symbols-outlined dark:text-white">arrow_back</span>
         </button>
-        <div class="flex-1 flex justify-center mr-6">
-            <h1 class="text-[#111418] dark:text-white text-lg font-bold tracking-tight">Cadastrar Nota</h1>
-        </div>
-    </div>
+        <h1 class="font-bold text-lg dark:text-white">Nova Nota</h1>
+        <div class="w-10"></div> </div>
 </header>
 
-<main class="flex-1 px-4 py-6">
-    <input type="hidden" id="note-id">
+<main class="flex-1 p-4">
+    <div class="max-w-2xl mx-auto space-y-6">
+        <input type="hidden" id="note-id">
 
-    <div class="space-y-6">
         <div class="space-y-2">
-            <label class="text-sm font-semibold text-gray-700 dark:text-gray-300 px-1" for="title">
-                Título da nota
-            </label>
-            <input class="w-full h-12 px-4 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-800 rounded-xl text-base focus:ring-2 focus:ring-primary/30 focus:border-primary transition-all dark:text-white placeholder:text-gray-400 dark:placeholder:text-gray-600" 
-                id="title" placeholder="Ex: Reunião de Planejamento" type="text"/>
+            <label class="text-sm font-bold text-gray-700 dark:text-gray-300" for="title">Título</label>
+            <input id="title" type="text" placeholder="Ex: Ideias para o projeto" 
+                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
         </div>
 
         <div class="space-y-2">
-            <label class="text-sm font-semibold text-gray-700 dark:text-gray-300 px-1" for="content">
-                Conteúdo
-            </label>
-            <textarea class="w-full p-4 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-800 rounded-xl text-base focus:ring-2 focus:ring-primary/30 focus:border-primary transition-all dark:text-white placeholder:text-gray-400 dark:placeholder:text-gray-600" 
-                id="content" placeholder="Descreva os detalhes da sua nota aqui..." rows="12"></textarea>
+            <label class="text-sm font-bold text-gray-700 dark:text-gray-300" for="content">Conteúdo</label>
+            <textarea id="content" rows="12" placeholder="Digite sua nota aqui..." 
+                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary"></textarea>
         </div>
     </div>
 </main>
 
-<footer class="p-4 bg-white/50 dark:bg-background-dark/50 backdrop-blur-sm border-t border-gray-100 dark:border-gray-800">
-    <button id="btn-save" onclick="saveNote()" class="w-full h-14 bg-primary text-white font-bold text-lg rounded-2xl shadow-lg shadow-primary/20 hover:bg-primary/90 active:scale-[0.98] transition-all flex items-center justify-center gap-2">
-        <span class="material-symbols-outlined">save</span>
+<footer class="p-4 max-w-2xl mx-auto w-full">
+    <button id="btn-save" onclick="saveNote()" class="w-full h-14 bg-primary text-white font-bold rounded-2xl shadow-lg hover:brightness-110 active:scale-[0.98] transition-all">
         Salvar Nota
     </button>
 </footer>
 
-<script src="listar_notas.js"></script>
-<script src="salvar_nota.js"></script>
 <script src="formulario_notas.js"></script>
-<script src="logout.js"></script>
+<script src="salvar_notas.js"></script>
+<script src="listar_notas.js"></script> 
 </body>
 </html>
