--- a/assets/app/notas/cadastrar_notas.html
+++ b/assets/app/notas/cadastrar_notas.html
@@ -3,66 +3,62 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Cadastro de Notas - ERP ABP</title>
+    <title>Cadastro de Notas ERP ABP</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../supabase_config.js"></script>    
     <script src="../verificar_login.js"></script>
         
-    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
     
-    <script>
+    <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
             theme: {
                 extend: {
-                    colors: { "primary": "#137fec", "background-dark": "#101922" },
-                    fontFamily: { "sans": ["Inter", "sans-serif"] }
+                    colors: { "primary": "#137fec", "background-light": "#f6f7f8", "background-dark": "#101922" },
+                    fontFamily: { "display": ["Inter", "sans-serif"] }
                 }
             }
         }
     </script>
 </head>
 
-<body class="bg-[#f6f7f8] dark:bg-background-dark min-h-screen flex flex-col">
+<body class="bg-background-light dark:bg-background-dark min-h-screen flex flex-col font-display">
 
 <header class="p-4 bg-white dark:bg-slate-900 border-b dark:border-slate-800 sticky top-0 z-10">
     <div class="max-w-2xl mx-auto flex items-center justify-between">
         <button onclick="window.location.href='listar_notas.html'" class="p-2 hover:bg-gray-100 dark:hover:bg-slate-800 rounded-full transition-colors">
             <span class="material-symbols-outlined dark:text-white">arrow_back</span>
         </button>
-        <h1 class="font-bold text-lg dark:text-white">Nova Nota</h1>
-        <div class="w-10"></div> </div>
+        <h1 class="font-bold text-lg dark:text-white text-center">Nova Nota</h1>
+        <div class="w-10"></div>
+    </div>
 </header>
 
-<main class="flex-1 p-4">
-    <div class="max-w-2xl mx-auto space-y-6">
+<main class="flex-1 p-4 pb-32"> <div class="max-w-2xl mx-auto space-y-6">
         <input type="hidden" id="note-id">
-
         <div class="space-y-2">
-            <label class="text-sm font-bold text-gray-700 dark:text-gray-300" for="title">Título</label>
+            <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Título</label>
             <input id="title" type="text" placeholder="Ex: Ideias para o projeto" 
-                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
+                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary focus:border-primary">
         </div>
-
         <div class="space-y-2">
-            <label class="text-sm font-bold text-gray-700 dark:text-gray-300" for="content">Conteúdo</label>
+            <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Conteúdo</label>
             <textarea id="content" rows="12" placeholder="Digite sua nota aqui..." 
-                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary"></textarea>
+                class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary focus:border-primary"></textarea>
         </div>
+        <button id="btn-save" onclick="saveNote()" class="w-full h-14 bg-primary text-white font-bold rounded-2xl shadow-lg hover:brightness-110 active:scale-[0.98] transition-all">
+            Salvar Nota
+        </button>
     </div>
 </main>
 
-<footer class="p-4 max-w-2xl mx-auto w-full">
-    <button id="btn-save" onclick="saveNote()" class="w-full h-14 bg-primary text-white font-bold rounded-2xl shadow-lg hover:brightness-110 active:scale-[0.98] transition-all">
-        Salvar Nota
-    </button>
-</footer>
-
 <script src="formulario_notas.js"></script>
 <script src="salvar_notas.js"></script>
-<script src="listar_notas.js"></script> 
+<script src="listar_notas.js"></script>
+<script src="../navbar.js"></script> 
 </body>
 </html>
