--- a/assets/app/listar_notas.html
+++ b/assets/app/listar_notas.html
@@ -6,8 +6,8 @@
     <title>Minhas Notas - ERP ABP</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../supabase_config.js"></script>    
-    <script src="../verificar_login.js"></script>
+    <script src="supabase_config.js"></script>    
+    <script src="verificar_login.js"></script>
     
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1" rel="stylesheet"/>
@@ -56,11 +56,11 @@
     <span class="material-symbols-outlined text-3xl">add</span>
 </button>
 
-<script src="listar_notas.js"></script>
-<script src="deletar_notas.js"></script>
-<script src="pesquisar_notas.js"></script>
-<script src="exportar_notas.js"></script>
-<script src="formulario_notas.js"></script>
-<script src="../navbar.js"></script>
+<script src="notas/listar_notas.js"></script>
+<script src="notas/deletar_notas.js"></script>
+<script src="notas/pesquisar_notas.js"></script>
+<script src="notas/exportar_notas.js"></script>
+<script src="notas/formulario_notas.js"></script>
+<script src="navbar.js"></script>
 </body>
 </html>
