--- a/assets/app/listar_notas.html
+++ b/assets/app/listar_notas.html
@@ -56,11 +56,19 @@
     <span class="material-symbols-outlined text-3xl">add</span>
 </button>
 
+
+
 <script src="notas/listar_notas.js"></script>
 <script src="notas/deletar_notas.js"></script>
 <script src="notas/pesquisar_notas.js"></script>
 <script src="notas/exportar_notas.js"></script>
-<script src="notas/formulario_notas.js"></script>
+<script src="notas/editar_notas.js"></script> 
 <script src="navbar.js"></script>
+    
+
+
+
+
+    
 </body>
 </html>
