--- a/assets/app/cadastrar_notas.html
+++ b/assets/app/cadastrar_notas.html
@@ -60,5 +60,10 @@
 <script src="notas/salvar_notas.js"></script>
 <script src="notas/listar_notas.js"></script>
 <script src="navbar.js"></script> 
+    <script src="listar_notas.js"></script>
+    
+<script src="salvar_notas.js"></script>
+<script src="editar_notas.js"></script> 
+    
 </body>
 </html>
