--- a/assets/app/cadastrar_tarefas.html
+++ b/assets/app/cadastrar_tarefas.html
@@ -34,36 +34,35 @@
             
             <div class="space-y-1">
                 <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Título da Tarefa</label>
-                <input id="title" type="text" placeholder="Ex: Relatório Mensal" class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
-            </div>
-
-            <div class="grid grid-cols-2 gap-4">
-                <div class="space-y-1">
-                    <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Entidade/Responsável</label>
-                    <input id="entidade" type="text" placeholder="Nome" class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
-                </div>
-                <div class="space-y-1">
-                    <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Status</label>
-                    <select id="status" class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
-                        <option value="pendente">Pendente</option>
-                        <option value="em_andamento">Em Andamento</option>
-                        <option value="concluida">Concluída</option>
-                    </select>
-                </div>
+                <input id="title" type="text" placeholder="Ex: Reunião de Alinhamento" class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
             </div>
 
             <div class="space-y-1">
-                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Descrição Detalhada</label>
-                <textarea id="content" rows="4" placeholder="Detalhes..." class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary"></textarea>
+                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Entidade (Cliente/Fornecedor)</label>
+                <input id="entidade" type="text" placeholder="Buscar cliente ou fornecedor..." class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
             </div>
 
             <div class="space-y-1">
-                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Observações Internas</label>
-                <input id="observacao" type="text" placeholder="Notas extras..." class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
+                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Tarefa (Descrição)</label>
+                <textarea id="content" rows="4" placeholder="Descreva a atividade..." class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary"></textarea>
+            </div>
+
+            <div class="space-y-1">
+                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Status</label>
+                <select id="status" class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary">
+                    <option value="pendente">Pendente</option>
+                    <option value="em_andamento">Em Andamento</option>
+                    <option value="concluida">Concluída</option>
+                </select>
+            </div>
+
+            <div class="space-y-1">
+                <label class="text-sm font-bold text-gray-700 dark:text-gray-300">Observação</label>
+                <textarea id="observacao" rows="3" placeholder="Informações adicionais..." class="w-full p-4 rounded-xl border-gray-200 dark:bg-slate-800 dark:border-slate-700 dark:text-white focus:ring-primary"></textarea>
             </div>
 
             <button id="btn-save" onclick="saveTask()" class="w-full h-14 bg-primary text-white font-bold rounded-2xl shadow-lg hover:brightness-110 active:scale-[0.98] transition-all flex items-center justify-center gap-2">
-                <span class="material-symbols-outlined">save</span>
+                <span class="material-symbols-outlined">check_circle</span>
                 Salvar Tarefa
             </button>
         </div>
@@ -75,4 +74,3 @@
     <script src="navbar.js"></script>
 </body>
 </html>
-
