--- a/assets/erp/index.html
+++ b/assets/erp/index.html
@@ -154,6 +154,10 @@ checarAutenticacao();
                 <h3>Produtos</h3>
                  </a>
 
+         <a href="pdv.html" class="card">
+                <i class="fas fa-sticky-note"></i>
+                <h3>Pdv</h3>
+          </a>
           
         </div>        
     </div>
